# changelog

./: database.py  main.py  pyproject.toml
static/css/: styles.css
static/js/: app.js
templates/: admin.html  index.html  public.html
